# csc702_fall2025

./: README.md  pyproject.toml  requirements.txt
emb_to_words/: Aman_Samuel.py  KesslerDotyEmbToWords.py  ReadMe.txt  vector.py
emb_to_words/Ashar_Allen/: Ashar_Tanner.py  README.md  embeddings.py  mathAi.lnk
emb_to_words/CharlesWyatt/: README.md  csc702-project2.ipynb
emb_to_words/Isaac/: WordEmbeddings.py
emb_to_words/Lucas-Piyush/: readme  vector.py
emb_to_words/MasonKomal/: komal.py  main.py
emb_to_words/Mike_Joseph/: DotyKesslerEmbToWords.py  ReadMe.txt
emb_to_words/Will_Cole_RoundTwo/: shortestPath_closestWord.py
hp_opt/: README.md  fashion.py  sandbox.py
hp_opt/Aman_Wyatt/wyatt_test/: random_forest.py  raytune_fashion.py  raytune_fashion_results.csv  raytune_forest.py
hp_opt/Ashar_Joseph/: fashion.py
hp_opt/Charles_Lucas/: fashion.py  random_forest.py
hp_opt/Group4/: FashionOpt.py
hp_opt/KomalSamuelGroup/: fashion.py
hp_opt/MasonTanner/: TannerMasonFashion.py
hp_opt/hp_opt_test/: data_utils.py  models.py  train.py
words_to_emb/: README.md
words_to_emb/Ashar_Adam/: shakespeare_embeddings.py
